# spyrmsdkit

./: .codecov.yml  .gitattributes  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
spyrmsdkit/: __init__.py  _version.py  spyrmsdkit.py
spyrmsdkit/analysis/: spyrmsd.py  utils.py
spyrmsdkit/data/: files.py
spyrmsdkit/tests/: conftest.py  test_spyrmsdkit.py
spyrmsdkit/tests/analysis/: test_spyrmsd.py  test_utils.py
